add gradient color in card view from drawable to value to layout.

--- a/AIUBStudent/app/src/main/res/layout/fragment_result_calculation.xml
+++ b/AIUBStudent/app/src/main/res/layout/fragment_result_calculation.xml
@@ -338,7 +338,9 @@
                 android:layout_height="1000dp"
                 android:id="@+id/ResultCalculationRecyclerView"
                 android:nestedScrollingEnabled="false"
-                >
+
+                android:layout_marginTop="30dp"
+                 >
 
             </androidx.recyclerview.widget.RecyclerView>
 
